# nnwm

./: .clang-format  CHANGELOG.md  CMakeLists.txt  LUA_WIKI.md  README.md  TODO.md  init.lua  nnwm.desktop
include/: actions.hpp  config.hpp  ipc.hpp  nnwm.hpp  tray.hpp
include/lua/: config.hpp
protocol/: wlr-layer-shell-unstable-v1.xml  wlr-output-power-management-unstable-v1.xml
src/: actions.cpp  bar.cpp  cursor.cpp  ext_workspace.cpp  foreign_toplevel.cpp  ipc.cpp  layer_shell.cpp  lua_config.cpp  main.c  main.cpp  nnwm.c  nnwm.cpp  nnwm_internal.hpp  output.cpp  session_lock.cpp  tray.cpp  xdg_shell.cpp  xwayland.cpp  xwayland_compat.c
src/lua/: config.cpp
src/nnwmctl/: nnwmctl.cpp
stubs/: border.lua  key.lua  nnwm.lua  util.lua
